--- a/thesis/content/background.tex
+++ b/thesis/content/background.tex
@@ -96,7 +96,7 @@ Peer-to-Peer (P2P) infrastructure is the counterpart of client-server-models. No
 \label{sec:multi-tier}
 Multi-Tier architecture is mostly mentioned in the context of web applications. In general it describes the separation of responsibilities on different \emph{physical} places \footnote{In this context physical separation means that there has to be going on any kind of communication between independent processes within the same machine or connected trough the internet.}. This is the main difference to a multi-layer-system where the responsibilities are separated but placed at the same process which indicates the use of interfaces. 
 
-A 3-Tier-Architecture nowadays refers mostly to the typical set-up of a web application as it can be seen in Figure \ref{fig:multi-tier}. It has to be noted that it is very common to use multi-tier and multi-layer architecture mutually. For example, the logic tier in the figure could use a data-access-layer to abstract the communication with the 
+A 3-Tier-Architecture nowadays refers mostly to the typical set-up of a web application as it can be seen in Figure \ref{fig:multi-tier}. It has to be noted that it is very common to use multi-tier and multi-layer architecture mutually. For example, the logic tier in the figure could use a data-access-layer to abstract the communication with the data tier. 
 
 \begin{figure}[htbp]
 	\centering
@@ -110,4 +110,11 @@ A 3-Tier-Architecture nowadays refers mostly to the typical set-up of a web appl
 \subsection{Waterfall}
 \subsection{Scrum}
 \subsection{Extreme Programming}
+
+\section{Technologies}
+\subsection{Swing}
+\subsection{JavaFX}
+\subsection{PostgreSQL}
+\subsection{MongoDB}
+\subsection{Cached Controller}
 \newpage
