--- a/thesis/content/introduction.tex
+++ b/thesis/content/introduction.tex
@@ -6,11 +6,14 @@ Many books are available on the topic of software design and architectural style
 
 The same topics are to a certain degree taught at universities however they all lack one substantial flaw: While they propose some pattern, explain when it is applying and how to implement it, they do not provide any evidence that when using the pattern in a real-world application there is an advantage to gain.  Many patterns claim that they improve the extensibility and increase the decoupling of code however in most of the example code only the basic implementation is showed. The impact on the code when a extension is actually implemented is not being shown by the books which leaves the reader to believe the promises made by the author. 
 
-While the patterns are in extensive use and are with no doubt of use litte scientific research is done on this topic. \href{http://ieeexplore.ieee.org/abstract/document/4493325/?reload=true}{http://ieeexplore.ieee.org/abstract/document/4493325/?reload=true} and \href{http://www.sciencedirect.com/science/article/pii/S0950584911002151;}{http://www.sciencedirect.com/science/article/pii/S0950584911002151;}
 
-This is not a very desirable situation and little to nothing scientific research is done on this topic which may be because of the difficulties about objectifying the process of software development. The patterns and strategies largely depend on the use case and will vary substantially from application to application which makes comparisons difficult. 
+While the patterns are in extensive use and thus have empirically proven themselves useful,the scientific research on this topic is far from being exhaustive. A study of 2008 was published at IEEE that tried to cover the effect of using design patterns in software development. This study came to the result that while the implementation of best practice methods in many cases enhanced some quality aspects while at the same time performing worse in other factors. It concluded that the use of patterns should be considered carefully as they lead to a certain trade-off.
 
-This thesis intends to give insights on how the use of well-established architectural and design pattern that claim to improve extensibility impact the code quality when this extensions are in fact implemented. This is done by developing two applications that are both designed to meet the same use cases and requirements. One is programmed by using established patterns while the other is programmed without considerations regarding code quality. 
-After meeting the basis requirements new features are being implemented, namely another type of persistence, a different kind of user interface and lastly means for caching data in the application to reduce the need of database queries. After realizing these changes in both programs the costs of implementing can be compared in both quantitative and qualitative ways. 
+Another study published covering a similar subject came to different results, concluding that the use of established design patterns in most of the cases led to a significant improvement of code quality, contradicting the previous study. \href{http://ieeexplore.ieee.org/abstract/document/4493325/?reload=true}{http://ieeexplore.ieee.org/abstract/document/4493325/?reload=true} and \href{http://www.sciencedirect.com/science/article/pii/S0950584911002151;}{http://www.sciencedirect.com/science/article/pii/S0950584911002151;}
 
-While the development of an application is highly subjective and depends on the coding style and experience of the engineer this thesis may provide means to develop a feeling for how the use of the patterns change the code and how they may be implemented.  
+It is hardly possible to perform scientific research on real-world software projects as there are only little ways for serious comparison. The patterns only provide a coarse guideline, the actual implementation largely depends on the use case and will vary substantially from application to application. Because of this most of the research is done via \emph{Controlled Experiments}, as is this thesis. Therefore it has to be said that most of this kind of studies are considered at least partially theoretical as a number of assumptions have to be made. The development of an application is highly subjective and depends on the coding style and experience of the engineer, code review policies can influence the quality as well.
+
+However this thesis intends to give insights on how the use of well-established architectural and design pattern that claim to improve extensibility impact the code quality when this extensions are in fact implemented. This is done by developing two applications that are both designed to meet the same use cases and requirements. One is programmed by using established patterns while the other is developed without considerations regarding code quality while nevertheless implementing the same basic program structure in order to improve comparability.
+
+After satisfying the basic requirements new features are being implemented, namely another type of persistence, a different kind of user interface and lastly means for caching data in the application to reduce the need of database queries. After realizing these changes in both programs the costs of implementing can be compared in both quantitative and qualitative ways. 
+
