working on thesis

--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -12,8 +12,8 @@
 \frontmatter
 
 \input{template/colophon}
-%\input{\mytitlepage}
-%\input{template/declaration_TU_Graz}  %% Statutory Declaration
+\input{\mytitlepage}
+\input{template/declaration_TU_Graz}
 %\cleardoublepage
 
 \tableofcontents
